--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,9 @@
 # Ignore everything
-**/*
-
-# But not these files...
-!.gitignore
-
-# ...even if they are in subdirectories
-!./Assets/Editor/AssetDistributor.cs
-!Assets/Scripts/*.cs
+/*
+!/Assets
+/Assets/*
+!/Assets/Editor
+/Assets/Editor/*
+!Assets/Editor/*.cs
 
 
